# cogniforge

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEMO_SCRIPT.md  DEMO_STATUS.md  FIXES_SUMMARY.md  IMPLEMENTATION_REPORT.md  MODULE_INDEX.md  Makefile  PRE_COMMIT_GUIDE.md  PROMPTS.md  README.md  README_NEURAL_NEXUS.md  RUN_DEMO.ps1  RUN_FULL_DEMO.bat  SAFE_GRASP_IMPLEMENTATION.md  SETUP_ENV.md  SYSTEM_COMPLETE.md  api_server.py  bad_script.py  bad_script_demo.py  benchmark_optimizers.py  benchmark_results.json  camera_constants_1920x1080.py  camera_constants_640x480.py  camera_intrinsics_1920x1080.json  camera_intrinsics_640x480.json  check_system.py  cmaes_checkpoint_20250927_192029.json  cmaes_checkpoint_20250927_192030.json  cmaes_checkpoint_20250927_192031.json  cmaes_checkpoint_20250927_192106.json  cmaes_checkpoint_20250927_192107.json  cmaes_history_demo.json  cogniforge_physics.py  cogniforge_pybullet_demo.py  (+81 more)
cogniforge/: __init__.py  cli.py  main.py
cogniforge/api/: execute_endpoint.py
cogniforge/cli/: __init__.py  train_cli.py
cogniforge/control/: __init__.py  grasp_execution.py  ik_controller.py  robot_control.py  safe_grasp_execution.py
cogniforge/core/: __init__.py  adaptive_optimization.py  config.py  deterministic_mode.py  evaluation.py  expert_prompt.py  expert_script.py  expert_script_with_fallback.py  gpt_reward_prompt.py  logging_utils.py  metrics_tracker.py  optimization.py  planner.py  policy.py  refinement.py  reward.py  safe_file_manager.py  seed_manager.py  simulator.py  time_budget.py  training.py  tree_visualizer.py
cogniforge/environments/: __init__.py  randomized_pick_place_env.py
cogniforge/learning/: behavioral_cloning.py
cogniforge/optimization/: cmaes_with_timeout.py  waypoint_optimizer.py
cogniforge/rl/: ppo_config.py
cogniforge/ui/: __init__.py  cmaes_visualizer.py  console_utils.py  ui_integration.py  vision_display.py
docker/: DOCKER_GUIDE.md  Dockerfile  docker-compose.yml  docker-run.ps1  docker-run.sh
docs/: dual_fallback_system.md  gpt_fallback_mechanism.md
examples/: block_spawning_demo.py  cli_usage_examples.py  demo_cmaes_pipeline.py  demo_fallback_pipeline.py  demo_vision_fallback.py  deterministic_simulation_demo.py  ee_control_demo.py  gripper_control_demo.py  ik_controller_demo.py  integrated_ui_demo.py  inverse_kinematics_demo.py  logging_integration_demo.py  metrics_tracking_demo.py  robot_reset_demo.py  robot_verification_demo.py  safe_grasp_demo.py  safe_operations_demo.py  test_cube_randomization.py  test_dual_fallback.py  time_budget_example.py  waypoint_motion_demo.py
execution_logs/: execution_log_20250928.json
expert_trajectories/: summary_20250928_044904.txt  summary_20250928_045028.txt  summary_20250928_045111.txt  trajectories_20250928_044903.json  trajectories_20250928_045027.json  trajectories_20250928_045111.json
frontend/: clear_cache.html  index.html  investor_demo_final.html  revolutionary_index.html  script.js
generated_code/: pick_place_20250928_081721.py  pick_place_20250928_083644.py  pick_place_20250928_083923.py  pick_place_20250928_093351.py  pick_place_20250928_093622.py  pick_place_20250928_094531.py  task_20250928_095946.py  task_20250928_100608.py
metrics/: comprehensive-test_metrics.json  test-metrics-001_metrics.json
scripts/: record_demo.bat  record_demo.ps1  record_demo.py  requirements-recording.txt
skills_library/: __init__.py  base_skill.py  demo_skills.py  pick_place_skill.py  push_skill.py  skill_registry.py  slide_skill.py  stack_skill.py
src/: algorithm_benchmark.py  bc_trainer.py  bc_trainer_enhanced.py  behavior_tree.py  behavior_tree_json.py  camera_intrinsics_manager.py  code_generator.py  color_calibration.py  color_vision_planner.py  expert_collector.py  final_runner.py  grasp_pose_verification.py  image_optimization.py  integrated_generation.py  learnable_nodes.py  motion_controller.py  motion_controller_with_undo.py  optimizer_visualizer.py  prompt_header.py  recovery_system.py  reset_system.py  robot_arm_verification.py  test_healthz.py  timing_monitor.py  torch_optimization.py  vision_system.py  waypoint_optimizer.py
tests/: __init__.py  test_coordinate_conversion.py  test_coordinate_transform.py  test_main.py  test_simulator.py  test_time_budget.py  test_waypoint_optimizer.py
venv311/: pyvenv.cfg
(+28 files in other folders)
