# setup.cfg - Configuration file for various Python tools

[metadata]
name = cogniforge
version = 0.1.0
description = A Python project with FastAPI, PyBullet, and ML libraries
author = Your Name
author_email = you@example.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.11
packages = find:
install_requires =
    fastapi
    uvicorn
    pybullet
    numpy
    pillow
    gymnasium
    torch
    stable-baselines3
    cmaes
    python-dotenv
    openai

[options.packages.find]
exclude =
    tests*
    docs*

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    -v
    --tb=short
    --strict-markers
    --cov=cogniforge
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
    --cov-fail-under=80

[coverage:run]
source = cogniforge
omit = 
    */tests/*
    */test_*.py
    */__init__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if __name__ == "__main__":
    raise AssertionError
    raise NotImplementedError
    if TYPE_CHECKING:
    @abstractmethod

[bdist_wheel]
universal = 0

[aliases]
test = pytest

[isort]
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True

[flake8]
max-line-length = 100
extend-ignore = E203,W503,E501
exclude = .git,__pycache__,build,dist,.venv,venv
max-complexity = 10

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_any_unimported = False
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True